// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds notification views fetches notifications omitting mentions and replies for taken-down posts 1`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "reply",
    "reasonSubject": "record(3)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(3)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(4)",
        },
      },
      "text": "indeed",
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "dan.test",
      "labels": Array [
        Object {
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "did:example:labeler",
          "uri": "user(1)",
          "val": "repo-action-label",
        },
      ],
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "repost",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(4)",
      },
    },
    "uri": "record(5)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(9)",
        "following": "record(8)",
        "muted": false,
      },
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [
      Object {
        "cid": "cids(4)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "did:example:labeler",
        "uri": "record(7)",
        "val": "test-label",
      },
      Object {
        "cid": "cids(4)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "did:example:labeler",
        "uri": "record(7)",
        "val": "test-label-2",
      },
    ],
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "$type": "blob",
              "mimeType": "image/jpeg",
              "ref": Object {
                "$link": "cids(5)",
              },
              "size": 4114,
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(1)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(4)",
        },
      },
      "text": "hear that label_me label_me_2",
    },
    "uri": "record(7)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "dan.test",
      "labels": Array [
        Object {
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "did:example:labeler",
          "uri": "user(1)",
          "val": "repo-action-label",
        },
      ],
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(4)",
      },
    },
    "uri": "record(10)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(7)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(12)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(8)",
        "uri": "record(12)",
      },
    },
    "uri": "record(11)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(4)",
      },
    },
    "uri": "record(13)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(9)",
        "following": "record(8)",
        "muted": false,
      },
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(12)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(8)",
        "uri": "record(12)",
      },
    },
    "uri": "record(14)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(9)",
        "following": "record(8)",
        "muted": false,
      },
    },
    "cid": "cids(11)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(4)",
      },
    },
    "uri": "record(15)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(9)",
        "following": "record(8)",
        "muted": false,
      },
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(3)",
    },
    "uri": "record(9)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(13)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(3)",
    },
    "uri": "record(2)",
  },
]
`;

exports[`pds notification views fetches notifications omitting records by a muted user 1`] = `
Array [
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [
      Object {
        "cid": "cids(0)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "did:example:labeler",
        "uri": "record(0)",
        "val": "test-label",
      },
      Object {
        "cid": "cids(0)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "did:example:labeler",
        "uri": "record(0)",
        "val": "test-label-2",
      },
    ],
    "reason": "reply",
    "reasonSubject": "record(3)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "$type": "blob",
              "mimeType": "image/jpeg",
              "ref": Object {
                "$link": "cids(1)",
              },
              "size": 4114,
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(3)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(3)",
        },
      },
      "text": "hear that label_me label_me_2",
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(5)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(4)",
        "uri": "record(5)",
      },
    },
    "uri": "record(4)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(3)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(3)",
      },
    },
    "uri": "record(6)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(2)",
  },
]
`;

exports[`pds notification views fetches notifications with a last-seen 1`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "reply",
    "reasonSubject": "record(3)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(3)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(4)",
        },
      },
      "text": "indeed",
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "dan.test",
      "labels": Array [
        Object {
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "did:example:labeler",
          "uri": "user(1)",
          "val": "repo-action-label",
        },
      ],
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "repost",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(4)",
      },
    },
    "uri": "record(5)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(1)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(4)",
        },
      },
      "text": "of course",
    },
    "uri": "record(7)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": Array [
      Object {
        "cid": "cids(5)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "did:example:labeler",
        "uri": "record(8)",
        "val": "test-label",
      },
      Object {
        "cid": "cids(5)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "did:example:labeler",
        "uri": "record(8)",
        "val": "test-label-2",
      },
    ],
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "$type": "blob",
              "mimeType": "image/jpeg",
              "ref": Object {
                "$link": "cids(6)",
              },
              "size": 4114,
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(1)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(4)",
        },
      },
      "text": "hear that label_me label_me_2",
    },
    "uri": "record(8)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "dan.test",
      "labels": Array [
        Object {
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "did:example:labeler",
          "uri": "user(1)",
          "val": "repo-action-label",
        },
      ],
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(7)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(4)",
      },
    },
    "uri": "record(11)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(8)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(13)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(9)",
        "uri": "record(13)",
      },
    },
    "uri": "record(12)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(4)",
      },
    },
    "uri": "record(14)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(11)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(13)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(9)",
        "uri": "record(13)",
      },
    },
    "uri": "record(15)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(4)",
      },
    },
    "uri": "record(16)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "dan.test",
      "labels": Array [
        Object {
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "did:example:labeler",
          "uri": "user(1)",
          "val": "repo-action-label",
        },
      ],
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(13)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": Array [],
    "reason": "mention",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.record",
        "record": Object {
          "cid": "cids(14)",
          "uri": "record(18)",
        },
      },
      "facets": Array [
        Object {
          "features": Array [
            Object {
              "$type": "app.bsky.richtext.facet#mention",
              "did": "user(3)",
            },
          ],
          "index": Object {
            "byteEnd": 18,
            "byteStart": 0,
          },
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "uri": "record(17)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(15)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": Array [],
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(3)",
    },
    "uri": "record(10)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(16)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": Array [],
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(3)",
    },
    "uri": "record(2)",
  },
]
`;

exports[`pds notification views fetches notifications without a last-seen 1`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "reply",
    "reasonSubject": "record(3)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(3)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(4)",
        },
      },
      "text": "indeed",
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "dan.test",
      "labels": Array [
        Object {
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "did:example:labeler",
          "uri": "user(1)",
          "val": "repo-action-label",
        },
      ],
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "repost",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(4)",
      },
    },
    "uri": "record(5)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(1)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(4)",
        },
      },
      "text": "of course",
    },
    "uri": "record(7)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [
      Object {
        "cid": "cids(5)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "did:example:labeler",
        "uri": "record(8)",
        "val": "test-label",
      },
      Object {
        "cid": "cids(5)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "did:example:labeler",
        "uri": "record(8)",
        "val": "test-label-2",
      },
    ],
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "$type": "blob",
              "mimeType": "image/jpeg",
              "ref": Object {
                "$link": "cids(6)",
              },
              "size": 4114,
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(1)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(4)",
        },
      },
      "text": "hear that label_me label_me_2",
    },
    "uri": "record(8)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "dan.test",
      "labels": Array [
        Object {
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "did:example:labeler",
          "uri": "user(1)",
          "val": "repo-action-label",
        },
      ],
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(7)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(4)",
      },
    },
    "uri": "record(11)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(8)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(13)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(9)",
        "uri": "record(13)",
      },
    },
    "uri": "record(12)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(4)",
      },
    },
    "uri": "record(14)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(11)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(13)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(9)",
        "uri": "record(13)",
      },
    },
    "uri": "record(15)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(4)",
      },
    },
    "uri": "record(16)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "dan.test",
      "labels": Array [
        Object {
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "did:example:labeler",
          "uri": "user(1)",
          "val": "repo-action-label",
        },
      ],
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(13)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "mention",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.record",
        "record": Object {
          "cid": "cids(14)",
          "uri": "record(18)",
        },
      },
      "facets": Array [
        Object {
          "features": Array [
            Object {
              "$type": "app.bsky.richtext.facet#mention",
              "did": "user(3)",
            },
          ],
          "index": Object {
            "byteEnd": 18,
            "byteStart": 0,
          },
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "uri": "record(17)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "hi im bob label_me",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(15)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(3)",
    },
    "uri": "record(10)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(16)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(3)",
    },
    "uri": "record(2)",
  },
]
`;

exports[`pds notification views generates notifications for quotes 1`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "notifications": Array [
    Object {
      "author": Object {
        "did": "user(0)",
        "handle": "carol.test",
        "labels": Array [],
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": false,
      "labels": Array [],
      "reason": "repost",
      "reasonSubject": "record(1)",
      "record": Object {
        "$type": "app.bsky.feed.repost",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "subject": Object {
          "cid": "cids(1)",
          "uri": "record(1)",
        },
      },
      "uri": "record(0)",
    },
    Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "description": "its me!",
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "viewer": Object {
          "followedBy": "record(3)",
          "muted": false,
        },
      },
      "cid": "cids(2)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": false,
      "labels": Array [
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "did:example:labeler",
          "uri": "record(2)",
          "val": "test-label",
        },
      ],
      "reason": "quote",
      "reasonSubject": "record(1)",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.record",
          "record": Object {
            "cid": "cids(1)",
            "uri": "record(1)",
          },
        },
        "text": "yoohoo label_me",
      },
      "uri": "record(2)",
    },
    Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "description": "its me!",
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "viewer": Object {
          "followedBy": "record(3)",
          "muted": false,
        },
      },
      "cid": "cids(3)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": false,
      "labels": Array [],
      "reason": "follow",
      "record": Object {
        "$type": "app.bsky.graph.follow",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "subject": "user(2)",
      },
      "uri": "record(3)",
    },
  ],
}
`;
